--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
           <h1 class="description">生年月日を入力してね</h1>
           <div class="input">
             <select name="year" id="year">
-              <option value="">-</option>
               <option value="1900">1900</option>
               <option value="1901">1901</option>
               <option value="1902">1902</option>
@@ -125,6 +124,7 @@
               <option value="1987">1987</option>
               <option value="1988">1988</option>
               <option value="1989">1989</option>
+              <option value="" selected>-</option>
               <option value="1990">1990</option>
               <option value="1991">1991</option>
               <option value="1992">1992</option>
