--- a/index.html
+++ b/index.html
@@ -228,7 +228,9 @@
           <h2>あなたの性格タイプは</h2>
           <div class="img-container"></div>
           <p class="text"><span class="result"></span>です</p>
-          <a href="" class="link">結果を見る</a>
+          <div class="link-container">
+            <p>ちょっと待ってね</p>
+          </div>
         </div>
       </main>
     </section>
@@ -273,10 +275,11 @@
         url: url,
       })
         .done(function (res) {
+          $(".link-container").html('<a href="" class="link">結果を見る</a>');
           $(".link").attr("href", res);
         })
         .fail(function (jqXHR, status) {
-          $(".link").html("<p>読み込みに失敗しました。</p>");
+          $(".link-container").html("<p>読み込みに失敗しました。</p>");
         });
     });
   </script>
