--- a/index.html
+++ b/index.html
@@ -277,6 +277,10 @@
         .done(function (res) {
           $(".link-container").html('<a href="" class="link">結果を見る</a>');
           $(".link").attr("href", res);
+          if ($(window).width() < 480) {
+            $(".link").attr("target", "_blank");
+            $(".link").attr("rel", "noopener");
+          }
         })
         .fail(function (jqXHR, status) {
           $(".link-container").html("<p>読み込みに失敗しました。</p>");
