--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       property="og:url"
       content="https://levure-s.github.io/colorDiacrisis/"
     />
-    <meta property="og:title" content="Baby's Bingo" />
+    <meta property="og:title" content="12色キャラ診断" />
     <meta property="og:type" content="article" />
     <meta
       property="og:description"
